--- a/app/youtubeList/views/youtubeList.tpl.html
+++ b/app/youtubeList/views/youtubeList.tpl.html
@@ -1,16 +1,30 @@
-<div class="col-sm-5 videos-list">
+<div class="col-sm-5">
 
   <p ng-if="!youtubeFactory.getVideos().length">No Videos</p>
 
-  <div class="media" ng-repeat="video in youtubeFactory.getVideos()">
+  <div class="media" ng-repeat="video in youtubeFactory.getVideos()"
+       class="video"
+       ng-class="{active: video.active}">
     <div class="media-left">
       <img ng-src="{{video.snippet.thumbnails.default.url}}" alt=""/>
     </div>
+
+
     <div class="media-body">
       <button class="btn btn-info pull-right" ng-click="setVideo(video)">Play</button>
       <h4 class="media-heading">{{video.snippet.title}}</h4>
       <p>{{video.snippet.description}}</p>
     </div>
+
+    <div>
+      <button class="btn btn-default btn-xs pull-right" ng-click="getVotes(video)">getVotes</button>
+
+    </div>
+    <div ng-if="video.statistics" class="likes">
+      <p>Likes: {{video.statistics.likeCount}}</p>
+      <p>Dislikes: {{video.statistics.dislikeCount}}</p>
+    </div>
+
   </div>
 
 </div>
